--- a/index.html
+++ b/index.html
@@ -15,22 +15,25 @@
 </header>
 
 <body>
+
+
+    <!-- search result  -->
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search your phone"
             aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button"
             id="button-addon2">Search</button>
     </div>
+    <!-- single phone details  -->
+    <div id="phone-details" class="card mx-auto" style="width: 18rem;">
+
+    </div>
+
     <!-- mobile details -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
     </div>
 
-    <!-- single phone details  -->
 
-    <div id="phone-details" class="card" style="width: 18rem;">
-
-    </div>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
