--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             aria-label="Recipient's username" aria-describedby="button-addon2">
         <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button"
             id="button-addon2">Search</button>
+
     </div>
+    <p id="error" class="text-danger"></p>
     <!-- single phone details  -->
     <div id="phone-details" class="card mx-auto" style="width: 18rem;">
 
     </div>
-
     <!-- mobile details -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
     </div>
