--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search your phone"
             aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button"
+        <button onclick="searchPhone()" class="btn btn-outline-secondary bg-success text-white" type="button"
             id="button-addon2">Search</button>
 
     </div>
@@ -31,7 +31,7 @@
 
     </div>
     <!-- mobile details -->
-    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 row-cols-lg-3 row-cols-sm-6 row-cols-xs-12 mx-auto g-4">
     </div>
 
 
